# audio-workshop

./: .gitignore  .gitmodules  CLAUDE.md  README.md  package-lock.json  package.json
.claude/skills/avfoundation-export/: SKILL.md
.claude/skills/black-video-export/: SKILL.md
docs/: WORKFLOW.md
scripts/: clean.ps1  dev.cmd  dev.ps1  safe-push.ps1  stop.cmd  stop.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
