[package]
name = "audio-workshop"
version = "0.2.0"
description = "Desktop audio editor"
authors = ["Audio Workshop"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
chrono = "0.4"
tauri-plugin-dialog = "2"

